@@ -6,3 +6,4 @@ Makefile
 *.lo
 *.oaf
 test-ditem
+desktop-item-boot
