@@ -1,3 +1,14 @@
+2001-06-10  Martin Baulig  <baulig@suse.de>
+
+	* gnome-desktop.xmldb: Moved here from ../libgnome.
+
+	* desktop-item-boot.c: New file. This is a small utility which you
+	need to run each time after doing a `make install'.
+
+	* bonobo-config-ditem-utils.c (bonobo_config_ditem_decode_any):
+	Added `BonoboConfigDatabase *ditem' and `const gchar *path' arguments.
+	Implemented TC_GNOME_ExtraAttributes.
+
 2001-06-09  Martin Baulig  <baulig@suse.de>
 
 	* bonobo-config-ditem-utils.c (bonobo_config_ditem_decode_any):
